greenfield/app/assets/stylesheets/greenfield/mobile.css.scss
/* This is a mobile wetsuit that is put on after the existing desktop styles */

@media only screen and (max-width: 600px) {
  .main-table-row {
    main {
      box-sizing: border-box;
      width: 100%;
      padding: 0 20px;
      .playlist {
        float: none;
        width: 100%;
        margin-right: 0;
        margin-bottom: $baseline/2;
        .small-cover {
          width: 60%;
          margin: 0 auto; 
          display: block!important;
        }
        h1 {
          text-align: center;
          a {
            font-size: 16px;
          }
        }
        h2 {
          font-size: 14px;
          text-align: center;
        }
        ul.tracklist {
          margin-top: $baseline;
        }

        // a.download-link {
        //   margin-top: $baseline / 2;
        //   a {
        //     font-size: 12px;
        //     i {
        //       margin-right: 8px;
        //     }
        //   }
        // }
        .sidebar-downloads {
          display: block!important;
        }
      }
      .track-content {
        float: none;
        width: 100%;
        margin-top: $baseline * 1.5;
        margin-left: 0;
        h1 {
          font-size: 20px;
          margin-bottom: $baseline;
        }
        .player {
          width: 100%;
          height: 60px;
          margin-top: 0;
          .play-button {
            font-size: 24px;
            display: block;
            width: 14px;
            height: 18px;
            margin-top: 5px;
            padding: 12px;
            padding-top: 8px;
            text-indent: 1px;
          }
          .time {
            font-size: 8px;
            margin-top: -5px;
            margin-left: 3px;
          }
          .waveform {
            left: 60px;
            width: 79%;
            height: 50px;
            padding-top: 4px;
          }
        }
        .large-cover {
          width: 100%;
          height: auto;
          margin-left: 0;
          display: none;
        }
        .playlist-options {
          width: 100%;
          display: none;
        }
        .post-content {
          font-size: 15px;
          display: block;
          width: 100%;
          margin-top: $baseline * 1.5;
          padding-right: 0;
          padding-left: 0;
          p {
            img {
              width: 100%;
              margin-left: 0px;
            }
          }
          hr {
            width: 90%;
            &:after {
              left: 46%;
            }
          }
        }
        .track-credits {
          width: 100%;
          margin-top: $baseline * 1.5;
          padding-right: 0;
          padding-left: 0;

        }
      }
    }
  }
}

